Added interactivity to links

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,7 +39,7 @@ header nav .nav-right-section {
   list-style: none;
   justify-content: center;
   align-items: center;
-  margin: 90px 8%;
+  margin: 90px 4%;
 }
 /* nav .nav-right-section a { */
   /* margin-right: 25px; */
@@ -188,16 +188,16 @@ nav .nav-right-section .menu-icon {
 #skills-list {
   list-style: none;
 }
+#footer a {
+  margin-right: 80px;
+  margin-left: 50px;
+} 
 .bottom-container {
   height: 100px;
   background-color: #c7827de3;
-  /* display: flex;
+  display: flex;
   align-items: center;
   justify-content: center;
-   */
-  /* text-align: center; */
-  text-align: center;
-  padding: 30px 0 20px;
 }
 /* .bottom-container {
   background-color: #AC8DAF;
