--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,7 @@ a:hover {
 }
 header {
   width: 100%;
-  height: 100px;
+  height: 50px;
 }
 header nav {
   display: flex;
@@ -39,23 +39,9 @@ header nav .nav-right-section {
   list-style: none;
   justify-content: center;
   align-items: center;
-  margin: 90px 4%;
+  margin: 0px 5%; 
+  padding-top: 60px;
 }
-/* nav .nav-right-section a { */
-  /* margin-right: 25px; */
-  /* color:  #5c4668; 
-  font-size: 20px; */
-}
-nav .nav-right-section .menu-icon {
-  background-image: url("https://static.thenounproject.com/png/756729-200.png");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: contain;
-  width: 25px;
-  height: 25px;
-}
-
-/* Grid CSS */
 
 .hero-banner {
   margin: 0px 5%;
@@ -78,12 +64,13 @@ nav .nav-right-section .menu-icon {
   font-size: 50px;
   font-weight: 250;
 }
-/* Category Grid CSS */
+
 .subHeading {
   text-align: center;
   width: 300px;
   margin: 50px auto;
 }
+
 .subHeading h3 {
   color: #5c4668;
   font-size: 40px;
@@ -91,11 +78,11 @@ nav .nav-right-section .menu-icon {
   margin: 0px 0px;
   color: #5c4668;
 }
-
+/* Grid CSS */
 #workGrid {
   margin: 0px 5%;
   display: grid;
-  grid-template-rows: 700px 400px 400px;
+  grid-template-rows: 800px 500px 500px;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-areas:
   "furniture-store furniture-store furniture-store"
@@ -129,40 +116,31 @@ nav .nav-right-section .menu-icon {
   align-content: end;
   border-radius: 15px;
 }
+.heading {
+  background-color: rgb(255, 255, 255,0.6);
+  padding: 20px 30px 30px 30px;
+  height: 25px;
+  color: #343a40d6;
+  font-size: 26px;
+}
 
 #about {
   margin: 0px 5%;
-  /* min-height: 500px;
-  height: 90vh; */
-  /* background-color: #c7827de3 ; */
   background-color: rgba(199, 130, 125, 0.2); 
+  border-radius: 15px;
   display: grid;
   grid-template-rows: 85vh;
   grid-template-columns: 1fr 1fr;
   grid-template-areas: 
   "about-me-image"
   ;
-  /* flex-direction: column;
-  align-items: center;
-  justify-content: center;  */
-  border-radius: 15px;
-  /* 
-  
-  grid-template-areas:
-  "furniture-store furniture-store furniture-store"
-  "code-refactor code-refactor equilibrium"
-  "code-refactor code-refactor equilibrium"
-  ; */
 }
-/* #code-refactor {
-  grid-area: code-refactor;
-  background-image: url("../images/01-html-css-git-challenge-demo.png");
-} */
 
 #about-me-image {
   grid-area: about-me-image;
   background-image: url("../images/andrew-neel-ute2XAFQU2I-unsplash.jpg");
 }
+
 .aboutGridArea {
   background-position: center;
   background-size: cover;
@@ -174,11 +152,12 @@ nav .nav-right-section .menu-icon {
   border-radius: 10px;
 }
 #about-me-text {
-  margin-top: 140px;
+  margin-top: 160px;
   color:#868e96;
+  margin-right: 50px;
 } 
 #about-me-text h2, h3 {
-  color: #343a40;
+  color: #343a40d6;
 }
  
 .spacing-content {
@@ -199,39 +178,69 @@ nav .nav-right-section .menu-icon {
   align-items: center;
   justify-content: center;
 }
-/* .bottom-container {
-  background-color: #AC8DAF;
-  
-} */
-
-/* @media only screen and (max-width: 1000px) {
-  #navigation {
-    display: none;
-  }
-  .icons {
-    margin-left: auto;
-  }
+@media only screen and (max-width: 1000px) {
+.hero-banner h1 {
+  font-size: 60px;
+}  
+.hero-banner h2 {
+  font-size: 40px;
+}
+a {
+  font-size: 16px;
+}
+header nav .nav-right-section {
+  margin: 0px -4%
+}
 }
 
 @media only screen and (max-width: 600px) {
-  #headline {
-    position: static;
-    margin: 20px;
-  }
-  #heroGrid {
-    grid-template-areas:
-    "featuredProduct featuredProduct"
-    "secondaryProduct CTA";
-  }
-  #categoryGrid {
-    grid-template-rows: 300px 300px 300px 300px 300px;
-    grid-template-columns: 1fr;
-    grid-template-areas:
-      "bookcases"
-      "bedroom"
-      "patio"
-      "couches"
-      "desks"
-    ;
-  }
-} */
+.hero-banner h1 {
+  font-size: 40px;
+}  
+.hero-banner h2 {
+  font-size: 20px;
+}
+a {
+  font-size: 12px;
+}
+header nav .nav-right-section {
+  margin: 0px -20%
+}
+ 
+#workGrid {
+  grid-template-rows: 80vh 80vh 80vh;
+  grid-template-columns: 1fr;    grid-template-areas:
+    "furniture-store"
+    "code-refactor"
+    "equilibrium"
+      ;
+}
+.subHeading h3 {
+  font-size: 26px;
+  font-weight: 400;
+}
+#about {
+  grid-template-rows: 40vh 40vh;
+  grid-template-columns: 1fr;
+  grid-template-areas:
+    "about-me-image"
+    "about-me-text"
+}
+#about-me-text p {
+  display: none;
+}
+#about-me-text {
+  margin-top: 10px;
+  margin-left: 40px;
+} 
+#about-me-text h3 {
+  color: #868e96;
+  font-size: 16px;
+}
+.spacing-content {
+  margin-top: 40px;
+}
+#workflow {
+  display: none;
+}
+}
