--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@ body {
 a { 
   text-decoration: none;
   cursor: pointer;
-  color:  #242628d6;; 
+  color:  #242628d6; 
   font-size: 20px;
   margin-right: 25px;
 }
